[package]
name = "async_smol_mob_in_the_middle"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
util.workspace = true

color-eyre.workspace = true
tracing.workspace = true

async-executor.workspace = true
async-io.workspace = true
futures-lite.workspace = true
